# iroha-pdf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  playwright.config.ts  test-setup.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: autosave.spec.ts  edit-existing.spec.ts  editing.spec.ts  fixtures.ts  global-setup.ts  helpers.ts  inspect.ts  memory-probe.spec.ts  open.spec.ts  performance.spec.ts  print.spec.ts  render.ts  rendering.spec.ts  tauri-stub.ts  tool-settings.spec.ts  tools.spec.ts  unsaved.spec.ts
apps/desktop/e2e-tauri/: run.mjs  size-ceiling.mjs
apps/desktop/src/: App.tsx  Workspace.tsx  document-store.test.ts  styles.css  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  app.json  eas.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  GOOGLE_DRIVE.md  PRIVACY_POLICY.md  PRIVACY_SECURITY.md  RELEASE_GATE.md  REPOSITORY_RESEARCH.md  STORE_PRIVACY_CHECKLIST.md  TEST_PLAN.md  VERIFICATION.md
issues/: ISSUES.md
release/mobile/: README.md  validate-eas-config.mjs
release/supply-chain/: README.md  audit-npm-licenses.mjs  deny.toml  normalize-cyclonedx.mjs  prepare-output.mjs
research/build-cache/: .gitignore  BUILD_CACHE_RESEARCH.md  README.md
(+15 files in other folders)
