[package]
name = "iroha-pdf"
version = "0.1.0"
description = "Local-first PDF workspace"
authors = ["Iroha PDF contributors"]
edition = "2021"

[lib]
name = "iroha_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
